--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,46 @@
-<h1>Josef Winters</h1>
+<h1>Welcome to CSE Motors</h1>
+<img class="display" src="/images/vehicles/delorean.jpg" alt="an image of a car modeled after the Delorean from the movie Back to the Future">
+<section class="info">
+    <h2>Replica Delorean</h2>
+    <span>4 cup holders</span>
+    <span>Superman doors</span>
+    <span>Time travel not included</span>
+    <button>Own Today</button>
+</section>
+
+<div class="detail">
+    <section>
+        <h2>Delorean Upgrades</h2>
+        <ul class="upgrades">
+            <li><figure>
+                <img src="/images/upgrades/flame.jpg" alt="">
+                </figure>
+                <a href="">Flame Decals</a>
+            </li>
+            <li><figure>
+                <img src="/images/upgrades/bumper_sticker.jpg" alt="">
+                </figure>
+                <a href="">Bumper Stickers</a>
+            </li>
+            <li><figure>
+                <img src="/images/upgrades/flux-cap.png" alt="">
+                </figure>
+                <a href="">Flux Capacitor</a>
+            </li>
+            <li><figure>
+                <img src="/images/upgrades/hub-cap.jpg" alt="">
+                </figure>
+                <a href="">Hub Caps</a>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h2>Delorean Reviews</h2>
+        <ul class="review">
+            <li>"Looks just like the film!"" (8/10)</li>
+            <li>"Super comfortable ride." (7/10)</li>
+            <li>"Real nice and cozy" (9/10)</li>
+            <li>"Super smooth on the road" (8/10)</li>
+        </ul>
+    </section>
+</div>
