--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="english">
-    <%- include('../partials/head') %>
+<html lang="en">
+<%- include('../partials/head') %>
 
     <body>
         <div id="wrapper">
