added in login page and sign up functionality

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,8 @@
   res.redirect('/')
 } %>
 
+<%- messages() %>
+
 <img class="display" src="/images/vehicles/delorean.jpg" alt="an image of a car modeled after the Delorean from the movie Back to the Future">
 <section class="info">
     <h2>Replica Delorean</h2>
