--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,6 +3,7 @@
   --header-font: "Oswald";
   --body-font: "Roboto";
   --square-size: 30px;
+  --card-background: rgb(174, 242, 242);
 }
 
 *,
@@ -35,6 +36,32 @@ header{
   font-family: var(--header-font);
 }
 
+a{
+  text-decoration: none;
+  color: black;
+  padding: 10px;
+}
+
+figure{
+  margin: 0;
+}
+
+fieldset{
+  text-align: left;
+  display: grid;
+  grid-template-columns: 1fr;
+  border: none;
+}
+
+form{
+  width: 50%;
+  justify-self: center;
+  border: 3px outset gray;
+  background-color: var(--card-background);
+  border-radius: 1rem;
+  text-align: center;
+}
+
 h1{
   padding-left: 10px;
 }
@@ -43,21 +70,28 @@ h2{
   text-align: center;
 }
 
-a{
-  text-decoration: none;
-  color: black;
-  padding: 10px;
-}
-
 header{
   display: flex;
   justify-content: space-between;
 }
 
-figure{
-  margin: 0;
+input{
+  padding: 8px;
+  width: 100%;
+  border-radius: .5rem;
 }
 
+input[type="submit" i]{
+  border-radius: 1rem;
+  padding: 6px 15px;
+  margin-top: 10px;
+  width: 50%;
+  justify-self: center;
+}
+
+p a{
+  padding: 0;
+}
 
 .detail{
   display: grid;
@@ -83,7 +117,7 @@ figure{
 }
 
 .info button{
-  background-color: rgb(0, 203, 203);
+  background-color: var(--card-background);
   margin: 10px 0;
   padding: 10px;
   font-size: larger;
@@ -148,7 +182,7 @@ figure{
   display: grid;
   justify-content: center;
   align-content: center;
-  background-color: rgb(0, 203, 203);
+  background-color: var(--card-background);
   border: 3px solid black;
 }
 
