--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -6,8 +6,8 @@
 
 <form action="/">
     <fieldset>
-        <label>Email: <input type="email" name="account_email"></label>
-        <label>Password: <input type="password" name="account_password"></label>
+        <label>Email: <input required type="email" name="account_email" placeholder="Enter a valid email address"></label>
+        <label>Password: <input required type="password" name="account_password"></label>
         <input type="submit" value="Login">
     </fieldset>
     <p>No account? <a href="/account/signUp">Sign-up</a></p>
