--- a/views/account/signUp.ejs
+++ b/views/account/signUp.ejs
@@ -4,8 +4,16 @@
   res.redirect('/')
 } %>
 
+<% if (errors) { %>
+  <ul class="notice">
+ <% errors.array().forEach(error => { %>
+   <li><%= error.msg %></li>
+<%  }) %>
+ </ul>
+<% } %>
+
 <form action="/account/signUp" method="post">
-    <fieldset>
+    <fieldset class="signUp">
         <label>First Name: <input required type="text" name="account_firstname"></label>
         <label>Last Name: <input required type="text" name="account_lastname"></label>
         <label>Email: <input required type="email" name="account_email" placeholder="Enter a valid email address"></label>
