added add inventory page

--- a/views/inventory/add-classification.ejs
+++ b/views/inventory/add-classification.ejs
@@ -14,7 +14,7 @@
 
 <form action="/inv/add-class" method="post">
     <fieldset>
-        <label>Classification Name: <input required type="text" pattern="[A-Za-z0-9\s]+$"></label>
+        <label>Classification Name: <input required type="text" name="classification_name" pattern="[A-Za-z0-9\s]+$"></label>
         <input type="submit" value="Input">
     </fieldset>
 </form>
