--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -95,6 +95,12 @@ input[type="submit" i]{
   justify-self: center;
 }
 
+textarea{
+  padding: 8px;
+  width: 100%;
+  border-radius: .5rem;
+}
+
 .signUp input:required:invalid, input:focus:invalid {
   background-color: rgba(255, 141, 141, 0.411);
 }
