added edit inventory view among misc. bug fixes

--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -8,4 +8,14 @@
 
 <a href="/inv/add-class"><button>Add Classification</button></a>
 
+<h2>Manage Inventory</h2>
+
+<%- classificationSelect %>
+
+<table id="inventoryDisplay"></table>
+<noscript>JavaScript must be enabled to use this page.</noscript>
+
+
 <a href="/inv/add-inv"><button>Add Inventory</button></a>
+
+<script src="../../js/inventory.js"></script>
