--- a/views/inventory/edit-inventory.ejs
+++ b/views/inventory/edit-inventory.ejs
@@ -14,16 +14,18 @@
 
 <%- messages() %>
 
-<form action="/inv/add-inv" method="post">
+<form action="/inv/update" method="post">
     <fieldset>
         <label>Make: <input type="text" name="inv_make" value="<%= locals.inv_make %>" required></label>
         <label>Model: <input type="text" name="inv_model" value="<%= locals.inv_model %>" required></label>
         <label>Year: <input type="number" min="1900" max="2099" step="1" name="inv_year" value="<%= locals.inv_year %>" required></label>
         <label>Description: <textarea name="inv_description" rows="5" required><%= locals.inv_description %></textarea></label>
-        <label>Price: <input type="number" min="1" max="999999999" name="inv_price" value="<%= locals.inv_price %>" required></label>
+        <label>Image: <input type="text" name="inv_image" value="<%= locals.inv_image %>"></label>
+        <label>Thumbnail: <input type="text" name="inv_thumbnail" value="<%= locals.inv_thumbnail %>"></label>
+        <label>Price: <input type="number" min="1" max="999999999" name="inv_price" value="<%- locals.inv_price %>" required></label>
         <label>Miles: <input type="number" min="0" name="inv_miles" value="<%= locals.inv_miles %>" required></label>
         <label>Color: <input type="text" name="inv_color" value="<%= locals.inv_color %>" required></label>
         <label>Classification: <%- classlist %></label>
-        <input type="submit" value="submit">
+        <input type="submit" name="submit" value="Update Vehicle">
     </fieldset>
 </form>
