--- a/views/inventory/edit-inventory.ejs
+++ b/views/inventory/edit-inventory.ejs
@@ -14,8 +14,11 @@
 
 <%- messages() %>
 
-<form action="/inv/update" method="post">
+<form action="/inv/update" id="updateForm" method="post">
     <fieldset>
+        <input type="hidden" name="inv_id"
+        <% if(locals.inv_id) { %> value="<%= locals.inv_id %>"
+        <% } %>>
         <label>Make: <input type="text" name="inv_make" value="<%= locals.inv_make %>" required></label>
         <label>Model: <input type="text" name="inv_model" value="<%= locals.inv_model %>" required></label>
         <label>Year: <input type="number" min="1900" max="2099" step="1" name="inv_year" value="<%= locals.inv_year %>" required></label>
@@ -26,6 +29,8 @@
         <label>Miles: <input type="number" min="0" name="inv_miles" value="<%= locals.inv_miles %>" required></label>
         <label>Color: <input type="text" name="inv_color" value="<%= locals.inv_color %>" required></label>
         <label>Classification: <%- classlist %></label>
-        <input type="submit" name="submit" value="Update Vehicle">
+        <input type="submit" id="submit" name="submit" value="Update Vehicle" disabled>
     </fieldset>
 </form>
+
+<script src="/js/inv-update.js"></script>
