--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -166,6 +166,11 @@ p a{
   color: white;
 }
 
+.red {
+  text-align: center;
+  color: red;
+}
+
 .review{
   display: flex;
   flex-direction: column;
