added the ability to logout of and update accounts

--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -6,4 +6,7 @@
 
 <%- messages() %>
 
-<p>you're logged in</p>
+<%- greeting %>
+
+<h3>update account</h3>
+<a href="/account/update"><button>Update Account</button></a>
