--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -42,6 +42,11 @@ a{
   padding: 10px;
 }
 
+a:has(button){
+  justify-self: center;
+  margin-left: 3rem;
+}
+
 button{
   padding: 10px;
   background-color: var(--card-background);
@@ -66,6 +71,7 @@ form{
   background-color: var(--card-background);
   border-radius: 1rem;
   text-align: center;
+  margin: 20px;
 }
 
 h1{
@@ -74,6 +80,10 @@ h1{
 
 h2{
   text-align: center;
+}
+
+h3{
+  margin-left: 3rem;
 }
 
 header{
