--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,6 @@
     <a href="/" title="Return to home page">CSE Motors</a>
   </span>
   <div id="tools">
-    <%# tool %>
+    <%- tool %>
   </div>
 </header>
