--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,3 +1,7 @@
 <nav class="navigation">
-    <%- nav %>
+    <ul>
+        <li><a href="/" title="Home page">Home</a></li>
+        <li><a href="/inv/type">Inventory</a></li>
+        <%- tool %>
+    </ul>
 </nav>
