changed link for get all route

--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,7 +1,7 @@
 <nav class="navigation">
     <ul>
         <li><a href="/" title="Home page">Home</a></li>
-        <li><a href="/inv/type">Inventory</a></li>
+        <li><a href="/inv/all">Inventory</a></li>
         <%- tool %>
     </ul>
 </nav>
